205: Wrap contextmenu in such a way the modal does not open
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/internal/server/ui/components/file_explorer/file_viewer/component.templ
+++ b/internal/server/ui/components/file_explorer/file_viewer/component.templ
@@ -5,6 +5,16 @@ templ Component() {
 		id="file-viewer"
 		class="fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"
 	>
-		Example dialog
+		<button
+			class="absolute top-2 right-2 p-2 rounded hover:bg-gray-200"
+			aria-label="Close"
+			hx-on:click="closeFileViewer(event)"
+		>
+			<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20">
+				<path stroke="currentColor" stroke-width="2" stroke-linecap="round" d="M5 5l10 10M15 5l-10 10"/>
+			</svg>
+		</button>
+		<div id="file-viewer-content" class="m-10">
+		</div>
 	</dialog>
 }
