--- a/internal/server/ui/components/file_explorer/scripts.templ
+++ b/internal/server/ui/components/file_explorer/scripts.templ
@@ -38,37 +38,57 @@ templ scripts() {
         }
     }
 
-    function viewFile(event, fileName) {
+    function viewFile(event, filePath, fileType) {
+        if (fileType === 'folder') {
+            return;
+        }
         event.preventDefault();
-        console.log(fileName);
-        if (fileName.includes('.')) {
-            const extension = fileName.split('.').pop().toLowerCase();
+        console.log(filePath);
+        if (filePath.includes('.')) {
+            const extension = filePath.split('.').pop().toLowerCase();
             console.log(extension);
-            viewAnyFile(event, fileName, extension);
+            viewAnyFile(event, filePath, extension);
         } else {
-            viewFileFallback(event, fileName);
+            viewFileFallback(event, filePath);
         }
     }
 
-    function viewFileFallback(event, fileName) {
+    function viewFileFallback(event, filePath) {
         event.preventDefault();
-        console.log(`Fallback logic: ${fileName}`);
+        console.log(`Fallback logic: ${filePath}`);
         // TODO: Implement fallback logic
-        openFileViewer(event, fileName);
+        openFileViewer(event, filePath);
     }
 
-    function viewAnyFile(event, fileName, extension) {
+    function viewAnyFile(event, filePath, extension) {
         event.preventDefault();
-        console.log(`Viewing file: ${fileName} with extension: ${extension}`);
+        console.log(`Viewing file: ${filePath} with extension: ${extension}`);
         // TODO: Implement logic to view file based on extension
-        openFileViewer(event, fileName);
+        openFileViewer(event, filePath, extension);
     }
 
-    function openFileViewer(event, fileName) {
+    function openFileViewer(event, filePath, extension) {
         event.preventDefault();
-        console.log(`Opening file modal for: ${fileName}`);
+        console.log(`Opening file modal for: ${filePath}`);
         const fileViewer = document.getElementById('file-viewer');
-        fileViewer.innerHTML = `<p>Viewing file: ${fileName}</p>`;
+        const fileViewerContent = document.getElementById('file-viewer-content');
+        console.log(fileViewer);
+        switch (extension) {
+            case 'txt':
+            case 'md':
+                fileViewerContent.innerHTML = `<p>TODO: viewing text file: ${filePath}</p>`;
+                break;
+            case 'jpg':
+            case 'png':
+                fileViewerContent.innerHTML = `<img src="/api/v1${filePath}" alt="${filePath}" class="max-w-full max-h-full">`;
+                break;
+            case 'pdf':
+                fileViewerContent.innerHTML = `<p>TODO: viewing pdf file: ${filePath}</p>`;
+                break;
+            default:
+                fileViewerContent.innerHTML = `<p>Unsupported file type: ${extension}</p>`;
+                break
+        }
         fileViewer.showModal();
     }
 
