222: Vendor all of HTMX and Tailwind, embedding in binary (#223)
Closes #222

Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/internal/server/ui/components/header/component.templ
+++ b/internal/server/ui/components/header/component.templ
@@ -2,9 +2,9 @@ package header
 
 templ Component() {
 	<head>
-		<script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.5/dist/htmx.min.js" crossorigin="anonymous"></script>
-		<script src="https://unpkg.com/htmx.org@1.9.12/dist/ext/json-enc.js"></script>
-		<script src="https://cdn.tailwindcss.com"></script>
+		<script src="/public/scripts/vendor/tailwind/tailwind.3.4.16.js"></script>
+		<script src="/public/scripts/vendor/htmx/htmx.min.js"></script>
+		<script src="/public/scripts/vendor/htmx/json-enc.js"></script>
 		<meta charset="UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title>Autobutler - Your home assistant</title>
