215: Fix upload area size
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/internal/server/ui/components/file_explorer/component.templ
+++ b/internal/server/ui/components/file_explorer/component.templ
@@ -12,7 +12,7 @@ import (
 templ Component(rootDir string, files []fs.FileInfo) {
 	<div
 		id="file-explorer"
-		class="bg-white dark:bg-gray-900 max-w-2xl mx-auto mt-10 rounded shadow p-6"
+		class="bg-white dark:bg-gray-900 max-full mx-8 mt-10 rounded shadow p-6"
 		hx-on:dragover="showUploadArea(event)"
 		hx-on:dragenter="showUploadArea(event)"
 		hx-on:dragleave="hideUploadArea(event)"
@@ -22,8 +22,7 @@ templ Component(rootDir string, files []fs.FileInfo) {
 		@file_viewer.Component()
 		<div
 			id="file-upload-area"
-			class="absolute inset-0 w-full h-full bg-black bg-opacity-40 flex hidden items-center justify-center z-50"
-			style="top: 0; left: 0;"
+			class="absolute inset-0 bg-black bg-opacity-40 flex hidden items-center justify-center"
 		></div>
 		<div class="flex items-center mb-4">
 			<h2 class="text-2xl font-bold mr-4 whitespace-nowrap">File Explorer</h2>
