--- a/internal/server/ui/components/file_explorer/component.templ
+++ b/internal/server/ui/components/file_explorer/component.templ
@@ -23,7 +23,11 @@ templ Component(rootDir string, files []fs.FileInfo) {
 		<div
 			id="file-upload-area"
 			class="absolute inset-0 bg-black bg-opacity-40 flex hidden items-center justify-center"
-		></div>
+		>
+			<span class="text-white text-lg bg-opacity-100 p-20 bg-gray-800 border rounded-3xl">
+				Drop files anywhere to upload
+			</span>
+		</div>
 		<div class="flex items-center mb-4">
 			<h2 class="text-2xl font-bold mr-4 whitespace-nowrap">File Explorer</h2>
 			@upload(rootDir)
