--- a/internal/server/ui/components/file_explorer/scripts.templ
+++ b/internal/server/ui/components/file_explorer/scripts.templ
@@ -7,15 +7,19 @@ templ scripts() {
         y: null,
     };
 
+    function preventDefault(event) {
+        if (event) {
+            event.preventDefault();
+            event.stopPropagation();
+        }
+    }
+
     function showFileDetails(event, fileName) {
         alert(fileName);
     }
 
     function toggleContextMenu(event, parentNode) {
-        if (event) {
-            event.preventDefault();
-            event.stopPropagation();
-        }
+        preventDefault(event);
         const contextMenu = parentNode.querySelector('.context-menu');
         contextMenu.style.left = null;
         contextMenu.style.top = null;
@@ -42,7 +46,7 @@ templ scripts() {
         if (fileType === 'folder') {
             return;
         }
-        event.preventDefault();
+        preventDefault(event);
         console.log(filePath);
         if (filePath.includes('.')) {
             const extension = filePath.split('.').pop().toLowerCase();
@@ -54,21 +58,21 @@ templ scripts() {
     }
 
     function viewFileFallback(event, filePath) {
-        event.preventDefault();
+        preventDefault(event);
         console.log(`Fallback logic: ${filePath}`);
         // TODO: Implement fallback logic
         openFileViewer(event, filePath);
     }
 
     function viewAnyFile(event, filePath, extension) {
-        event.preventDefault();
+        preventDefault(event);
         console.log(`Viewing file: ${filePath} with extension: ${extension}`);
         // TODO: Implement logic to view file based on extension
         openFileViewer(event, filePath, extension);
     }
 
     function openFileViewer(event, filePath, extension) {
-        event.preventDefault();
+        preventDefault(event);
         console.log(`Opening file modal for: ${filePath}`);
         const fileViewer = document.getElementById('file-viewer');
         const fileViewerContent = document.getElementById('file-viewer-content');
@@ -156,10 +160,53 @@ templ scripts() {
     }
 
     function closeFileViewer(event) {
-        event.preventDefault();
+        preventDefault(event);
         const fileViewer = document.getElementById('file-viewer');
         fileViewer.close();
         clearFileViewer();
+    }
+
+    function supportsDirectoryUpload() {
+        const supportsFileSystemAccessAPI = 'getAsFileSystemHandle' in DataTransferItem.prototype;
+        const supportsWebkitGetAsEntry = 'webkitGetAsEntry' in DataTransferItem.prototype;
+        // NOTE: I have found that none of my browsers support this, and likely is why Google Drive does not support
+        // folder upload without a separate input.
+        return supportsFileSystemAccessAPI || supportsWebkitGetAsEntry;
+    }
+
+    function activateDropZone(event) {
+        preventDefault(event);
+        const fileUploadArea = document.getElementById('file-upload-area');
+        fileUploadArea.classList.add('bg-blue-600');
+        fileUploadArea.classList.remove('bg-gray-800');
+    }
+
+    function deactivateDropZone(event) {
+        preventDefault(event);
+        const fileUploadArea = document.getElementById('file-upload-area');
+        fileUploadArea.classList.remove('bg-blue-600');
+        fileUploadArea.classList.add('bg-gray-800');
+    }
+
+    function dropFiles(event, rootDir) {
+        console.log('Drop files event:', event);
+        preventDefault(event);
+        const files = event.dataTransfer.files;
+        if (files.length > 0) {
+            const formData = new FormData();
+            for (let i = 0; i < files.length; i++) {
+                formData.append('files', files[i]);
+            }
+            const uploadForm = document.getElementById('file-upload-form');
+            // NOTE: https://flaviocopes.com/htmx-send-files-using-htmxajax-call/
+            htmx.ajax('POST',
+                uploadForm.getAttribute('hx-post'), {
+                values: {
+                    files: formData.getAll('files')
+                },
+                source: uploadForm,
+            });
+        }
     }
     </script>
 }
