--- a/internal/server/ui/components/file_explorer/node.templ
+++ b/internal/server/ui/components/file_explorer/node.templ
@@ -19,34 +19,41 @@ templ node(rootDir string, file fs.FileInfo) {
 		{{ fileType := util.DetermineFileType(file) }}
 		{{ filePath := filepath.Join("/files", rootDir, file.Name()) }}
 		<div class="flex items-center">
-			<div
-				class="flex flex-1 items-center"
-				hx-on:click={ templ.JSFuncCall("viewFile", templ.JSExpression("event"), filePath, fileType) }
-			>
-				switch fileType {
-					case util.FileTypeFolder:
-						@folder.Component()
-					case util.FileTypePDF:
-						@pdf.Component()
-					case util.FileTypeSlideshow:
-						@slideshow.Component()
-					case util.FileTypeImage:
-						@image.Component()
-					default:
-						@generic.Component()
-				}
-				if fileType == util.FileTypeFolder {
+			{{ /* Render the appropriate icon based on the file type */ }}
+			switch fileType {
+				case util.FileTypeFolder:
+					@folder.Component()
+				case util.FileTypePDF:
+					@pdf.Component()
+				case util.FileTypeSlideshow:
+					@slideshow.Component()
+				case util.FileTypeImage:
+					@image.Component()
+				default:
+					@generic.Component()
+			}
+			if fileType == util.FileTypeFolder {
+				<div
+					class="flex flex-1 items-center"
+				>
 					<a href={ filePath } class="flex-1 py-3">
 						<span class="file-name">{ file.Name() }</span>
 					</a>
-				} else {
+					<span class="text-gray-600 dark:text-gray-200 text-sm">{ util.SizeBytesToString(file.Size()) }</span>
+				</div>
+			} else {
+				<div
+					class="flex flex-1 items-center"
+					hx-get={ filepath.Join("/components/files/viewer", filePath) }
+					hx-target="#file-viewer-content"
+					hx-swap="innerHTML"
+					hx-on:click="document.getElementById('file-viewer').showModal();"
+				>
 					<div class="flex-1 py-3">
 						<span class="file-name">{ file.Name() }</span>
 					</div>
-				}
-				<span class="text-gray-600 dark:text-gray-200 text-sm">{ util.SizeBytesToString(file.Size()) }</span>
-			</div>
-			if fileType != util.FileTypeFolder {
+					<span class="text-gray-600 dark:text-gray-200 text-sm">{ util.SizeBytesToString(file.Size()) }</span>
+				</div>
 				<div class="justify-self-end">
 					@contextMenu(rootDir, file)
 				</div>
