--- a/internal/server/ui/components/file_explorer/file_viewer/component.templ
+++ b/internal/server/ui/components/file_explorer/file_viewer/component.templ
@@ -5,9 +5,13 @@ templ Component() {
 		id="file-viewer"
 		class="fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"
 		hx-on:close="closeFileViewer(event)"
+		closedby="none"
+		onkeydown="if (event.key === 'Enter') { preventDefault(event); }"
 	>
 		<script src="/public/scripts/vendor/epub.js/jszip.min.js"></script>
 		<script src="/public/scripts/vendor/epub.js/epub.min.js"></script>
+		<link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet"/>
+		<script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
 		<button
 			class="absolute top-2 right-2 p-2 rounded hover:bg-gray-200"
 			aria-label="Close"
