--- a/internal/server/ui/views/home.templ
+++ b/internal/server/ui/views/home.templ
@@ -5,12 +5,16 @@ import (
 	"autobutler/internal/server/ui/components/footer"
 	"autobutler/internal/server/ui/components/header"
 	"autobutler/internal/server/ui/components/hero"
+	"autobutler/internal/server/ui/components/topnav"
+	"autobutler/internal/server/ui/types"
 )
 
-templ Home() {
+templ Home(pageState types.PageState) {
+	{{ pageState.CurrentRoute = types.RouteHome }}
 	<!DOCTYPE html>
 	<html lang="en">
 		@header.Component()
+		@topnav.Component(pageState)
 		@body.Component() {
 			@hero.Component()
 		}
