226: Move vendor scripts up a dir
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/internal/server/ui/components/file_explorer/file_viewer/component.templ
+++ b/internal/server/ui/components/file_explorer/file_viewer/component.templ
@@ -8,10 +8,10 @@ templ Component() {
 		closedby="none"
 		onkeydown="if (event.key === 'Enter') { preventDefault(event); }"
 	>
-		<script src="/public/scripts/vendor/epub.js/jszip.min.js"></script>
-		<script src="/public/scripts/vendor/epub.js/epub.min.js"></script>
-		<link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet"/>
-		<script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
+		<script src="/public/vendor/epub.js/jszip.min.js"></script>
+		<script src="/public/vendor/epub.js/epub.min.js"></script>
+		<link href="/public/vendor/quill/quill.snow.css" rel="stylesheet"/>
+		<script src="/public/vendor/quill/quill.js"></script>
 		<button
 			class="absolute top-2 right-2 p-2 rounded hover:bg-gray-200"
 			aria-label="Close"
